--- a/.gitignore
+++ b/.gitignore
@@ -352,4 +352,12 @@ MigrationBackup/
 /node_modules
 
 # utility
+.eslintrc.js
+
+# visual studio
+.vscode
+
+# json
+package-lock.json.lock
+package.json.lock
 
