--- a/FamilyTree.WebUI/wwwroot/package.json
+++ b/FamilyTree.WebUI/wwwroot/package.json
@@ -1,12 +1,10 @@
 {
   "name": "wwwroot",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "preinstall": "npx only-allow pnpm"
   },
-  "author": "",
   "license": "MIT",
   "dependencies": {
     "@microsoft/signalr": "^5.0.17",
