--- a/FamilyTree.WebUI/wwwroot/package.json
+++ b/FamilyTree.WebUI/wwwroot/package.json
@@ -33,5 +33,10 @@
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
     "prettier": "3.1.1"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "npm run lint:fix"
+    ]
   }
 }
