--- a/FamilyTree.WebUI/wwwroot/package.json
+++ b/FamilyTree.WebUI/wwwroot/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "lint": "eslint . --ext .js,.ts",
-    "lint:fix": "npm run lint --fix",
+    "lint:fix": "pnpm run lint --fix",
     "prettier": "prettier . --write"
   },
   "engines": {
@@ -36,7 +36,7 @@
   },
   "lint-staged": {
     "*.{js,ts}": [
-      "npm run lint:fix"
+      "pnpm run lint:fix"
     ]
   }
 }
